--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,15 @@
-sonar.projectKey=U425mut_ChronoGlobe
+sonar.projectKey=ChronoGlobe
 sonar.organization=u425mut
 sonar.projectName=ChronoGlobe
+
+# Kod taranacak klasörler
 sonar.sources=.
+
+# Hariç tutulacak dosyalar
 sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.test.*,**/*.spec.*
+
+# Kodlama
 sonar.sourceEncoding=UTF-8
+
+# Test coverage (npm test --coverage ile üretilen dosya)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
