--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=U425mut_ChronoGlobe
 sonar.organization=u425mut
+sonar.projectKey=ChronoGlobe
 sonar.projectName=ChronoGlobe
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.test.*,**/*.spec.*
